<package>
    <name>autoscrubber</name>
    <version>1.0.0</version>
    <description>
        This node controls the scrub machine to move, it supports two navigation mode, one is fixpattern, one is auto navigation.
    </description>
    <author>chenkan</author>
    <maintainer email="chenkan@gs-robot.com">Chen Kan</maintainer>
    <license>No License, Gaussian Automation reserves all rights.</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>costmap_2d</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>autoscrubber_services</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>gslib</build_depend>
    <build_depend>fixpattern_path</build_depend>
    <build_depend>search_based_global_planner</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>fixpattern_local_planner</build_depend>
    <build_depend>global_planner</build_depend>

    <run_depend>costmap_2d</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>autoscrubber_services</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>gslib</run_depend>
    <run_depend>fixpattern_path</run_depend>
    <run_depend>search_based_global_planner</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>fixpattern_local_planner</run_depend>
    <run_depend>global_planner</run_depend>
</package>
