<?xml version="1.0"?>
<package>
    <name>autoscrubber_control</name>
    <version>1.0.0</version>
    <description>op node for autoscrubber</description>

    <maintainer email="chenkan@gs-robot.com">Cameron</maintainer>
    <license>BSD</license>
    <author email="chenkan@gs-robot.com">Cameron</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>

</package>
