<package>
    <name>search_based_global_planner</name>
    <version>1.0.0</version>
    <description>
        This global planner is based on sbpl.
    </description>
    <author>chenkan</author>
    <maintainer email="chenkan@gs-robot.com">Chen Kan</maintainer>
    <license>No License, Gaussian Automation reserves all rights.</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>gslib</build_depend>
    <build_depend>fixpattern_path</build_depend>

    <run_depend>costmap_2d</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>gslib</run_depend>
    <run_depend>fixpattern_path</run_depend>
</package>
